--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "resend": "^4.1.2",
+    "stripe": "^18.2.1",
     "tailwindcss": "^3.4.13",
     "typescript": "^5.6.2"
   },
